# MVC_MVP

MVC/MVC_test/: CMakeLists.txt
MVC/MVC_test/src/: Controller.cpp  Controller.h  mainwindow.cpp  mainwindow.h
MVP_culc/: CMakeLists.txt
MVP_culc/src/: CulcModel.cpp  CulcModel.h  CulcPresenter.cpp  CulcPresenter.h  CulcView.cpp  CulcView.h  main.cpp
